# simulit

./: CMakeLists.txt  README.md  main.cpp  resources.qrc
api/: CMakeLists.txt  inamed.hpp  isimulationcontroller.hpp  isimulationdll.hpp  property.hpp  simulation.hpp  statistic.hpp  tools.hpp  utils.hpp  variable.hpp
controller/: simulationcontroller.cpp  simulationcontroller.hpp
gui/: Main.qml  MenuButton.qml  PropertyItem.qml  PropertyNodeDelegate.qml  StartButton.qml  StatisticItem.qml  StopButton.qml
gui/controllers/: AnimatedController.qml  FocalButton.qml  SimpleController.qml
gui/properties/: PropertyItem.qml  PropertyNodeDelegate.qml  propertyadapter.hpp
gui/statistics/: StatisticsItem.qml  StatisticsNodeDelegate.qml  statisticadapter.hpp
simulationprovider/: activesimulationhandler.cpp  activesimulationhandler.hpp  simulationprovider.cpp  simulationprovider.hpp
simulations/: CMakeLists.txt
simulations/montecarlo/: CMakeLists.txt  montecarlo.cpp  montecarlo.h  qmldir
simulations/toolateortoosoon/: CMakeLists.txt  qmldir  toolateortoosoon.cpp  toolateortoosoon.h
src/: simulationhandler.cpp  simulationhandler.hpp
src/adapters/: iadapter.hpp  property.hpp  simulationrecord.hpp  statistic.hpp
src/controllers/: animatedcontroller.cpp  animatedcontroller.hpp  controllerstate.hpp  defaultcontroller.cpp  defaultcontroller.hpp  icontroller.hpp  simplecontroller.cpp  simplecontroller.hpp
src/loaders/: dllloader.cpp  dllloader.hpp  iloader.hpp
src/providers/: constantproperties.cpp  constantproperties.hpp  image.cpp  image.hpp  iprovider.hpp  properties.cpp  properties.hpp  simulations.cpp  simulations.hpp  statistics.cpp  statistics.hpp
src/providers/runnerproperties/: separatethread.cpp  separatethread.hpp
src/providers/workerproperties/: simpleworker.cpp  simpleworker.hpp
src/runner/: irunner.hpp
src/runners/: irunner.hpp  iworker.hpp  separatethread.cpp  separatethread.hpp  simpleworker.cpp  simpleworker.hpp
src/tools/: determinenumbergenerator.cpp  determinenumbergenerator.hpp  numbergeneratorfactory.cpp  numbergeneratorfactory.hpp  randomnumbergenerator.cpp  randomnumbergenerator.hpp
src/workers/: iworker.hpp  iworkerhandler.hpp  pool.cpp  pool.hpp  simpleworkerhandler.cpp  simpleworkerhandler.hpp  workerhandler.cpp  workerhandler.hpp  workerhandlerfactory.cpp  workerhandlerfactory.hpp
